[package]
name = "crabcache"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
byteorder = "1.5.0"
container_of = "0.5.1"
mio = { version = "1", features = ["os-poll", "net"] }
quickcheck = "0.8"




[dev-dependencies]
rand = "0.6.5"
itertools = "0.8"
quickcheck_macros = "0.8"